Add twitter post ref

--- a/_posts/2018/2018-05-24-Jeeconf.md
+++ b/_posts/2018/2018-05-24-Jeeconf.md
@@ -11,6 +11,9 @@ authors: ["Oleksandr"]
 
 This weekend I had a chance to spend a great time with great people, learn something new and get some inspiration on the [Jeeconf](https://jeeconf.com){:target="_blank"} in Kyiv. I have to admit that I was a bit skeptical while buying the ticket in advance with not fully defined schedule, but it turned out to be very interesting from the content perspective and very well organized.
 
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">First day at <a href="https://twitter.com/hashtag/jeeconf?src=hash&amp;ref_src=twsrc%5Etfw">#jeeconf</a> in Kiev big crowd with excellent 2 day agenda <a href="https://twitter.com/hashtag/java?src=hash&amp;ref_src=twsrc%5Etfw">#java</a> <a href="https://t.co/Lh2yl7Aq08">pic.twitter.com/Lh2yl7Aq08</a></p>&mdash; Hugh McKee (@mckeeh3) <a href="https://twitter.com/mckeeh3/status/997367903925174272?ref_src=twsrc%5Etfw">May 18, 2018</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 The conference is being promoted as the largest Java conference in the Eastern Europe. Despite this focus it was still possible to find number of interesting talks in English.
 
 I personally enjoyed talks given by guys from [Pivotal](https://pivotal.io){:target="_blank"}. [Juergen Hoeller](https://twitter.com/sam_brannen/status/572114327311941634){:target="_blank"} made an overview of Spring framework evolution for last fifteen years starting from the very beginning, covering a bit the release schedule for 2018.
