About the author

--- a/_posts/2018/2018-05-24-Jeeconf.md
+++ b/_posts/2018/2018-05-24-Jeeconf.md
@@ -26,3 +26,9 @@ Thanks to the presentation from [Dmitry Jemerov](https://twitter.com/intelliyole
 I was also excited to visit so called ["Birds of a feather"](https://en.wikipedia.org/wiki/Birds_of_a_feather_%28computing%29){:target="_blank"} with a very noticeable title "Kotlin: new silver bullet or the future", where every one had a change to ask question not only related to the programming language, but also about the company standing behind it. The BOF session was prolonged due to the high interest from the audience rising questions pretty actively. This format of a meeting is a great opportunity for everyone to have an easy access to the key people of the software industry get some insights and details about key decision made in the past, as well as get know plans for future.
 
 That was a great time, looking forward for the next year event!
+
+## About the author
+
+{% image_custom image="/assets/img/pages/blog/images/author-oleksandr-vynogradov.jpg" width="10" align="left" circle %}
+
+Oleksandr Vynogradov is Senior Java Developer and Kotlin enthusiast, passionate about automation.
