--- a/_posts/2018/2018-03-27-cto-post.md
+++ b/_posts/2018/2018-03-27-cto-post.md
@@ -9,27 +9,28 @@ tags: ["CTO"]
 authors: ["Harm"]
 ---
 
-We've been working on a new backend architecture for quite a while now, which is in a certain way exhausting, as we have to maintain and develop two products with very little synergy.
+We've been working on a new backend architecture for quite a while now, which is in a certain way exhausting for all, as we have to maintain and develop two products with very little synergy.
+
 So, why do we go this extra mile here at ePages?
 
 ## Environment changes fast
 
-The IT world changed drastically in the last years as the speed of adoption seems to increase logarithmic.
+The IT world changed drastically in the last years as the amount of new Open Source Frameworks and the speed of adoption and seems to increase logarithmic.
 Software vendors focus more and more on their core functionalities.
 That allows them to specialize and become best-in-class in their specific segment.
 
 ### Approaches to bridge the gap
 
-But when you cut functionality down to the core - you need to get the "topping" from somewhere else.
-So, the down side of this evolution is that you need to integrate these toppings.
-The easiest way to do so, is via APIs - more or less standardized interfaces, which allow systems to talk to each other and thus enrich your core systems with additional functionalities.
+But when you cut functionality down to the core - you need to get the "topping" or "base" from somewhere else. So, the down side of this evolution is that you need to integrate in various directions.
+The easiest and nowday common way to do so, is via APIs - more or less standardized interfaces, which allow systems to talk to each other and thus enrich your core systems with additional functionalities.
 
 ### The past was different
 
-As many other companies, ePages started the millennium with a monolith approach that we enhanced and enriched over time.
-This means that, in the end, we offered some awkward functions like a holiday-appartment reservation tool - although being an ecommerce system.
-That way our old stack became overloaded and lead to many dependencies.
-Our monolith became more and more complicated to maintain, and we started spending too much time on keeping stuff running instead of creating business value.
+As many other companies, ePages started the millennium with a monolith approach that we enhanced and enriched over time. Some times you go straight, but sometimes you go detours and later it looks like you lost focus, although you just tried to open up new market potentials ... which later never gets cleaned up.
+
+In the end you may offer some awkward functions like a holiday-appartment reservation tool - although being an ecommerce system.
+That way our actual stack became overloaded and lead to many dependencies.
+Our monolith become more and more work-intensive to maintain, and we started spending too much time on keeping stuff running instead of creating additional business value.
 Additionally, although it delivers good performance and is still heavily used and liked by our merchants, it's architecture is definitely outdated.
 
 ### New architecture needed
@@ -40,10 +41,10 @@ That's why we've decided to go with an API-first approach, which allows us to be
 
 ## Set it on a solid ground
 
-This flexibility is on the one hand based on an architecture that decouples frontend and backend and on the other hand on an organization of functions around capabilities, which enforces a modular structure.
+This flexibility is on the one hand based on an architecture that decouples frontend and backend and on an organization of functions around capabilities, which enforces a modular structure.
 
 Furthermore, we make use of the latest tech stack by changing towards a Java and JavaScript ecosystem and providing operational abstraction with Docker and Kubernetes.
-Working with open source frameworks rounds everything off, as it allows us to “stand on the shoulders of giants”.
+Working with open source frameworks rounds everything off, as it allows us to “stand on the shoulders of giants” by leveraging of 100 thousand lines of own code twoards 1 billion lines of Open Source code.
 
 ### Based on microservices
 
@@ -54,16 +55,23 @@ This setup allows us a freedom of choice concerning micro architecture and langu
 
 As a result, we've built an SaaS ecommerce platform based on microservices and divided into typical ecommerce domains like products, orders, and customers.
 The team organization is aligned to that structure in the meaning of one team owns n-services (1:n).
-This decentral distribution avoids dependencies between the single services and reduces complexity.
+This decentral distribution avoids dependencies between the single services and reduces complexity in one microservice.
 Furthermore, it offers a high flexibility and allows us to easily replace or add services.
 
 ### Additional target groups
 
 Our API-first approach not only gives us back the "freedom to develop" and have fun doing so, but also allows us to open up different target groups by connecting to other systems.
-Nearly everyone, who enriches us or vice versa, can connect via API, as you can see below:
 
-{% image_custom image="/assets/img/pages/blog/images/blog-infographic.jpg" width="50" lightbox %}
+Nearly everyone, who enriches us or vice versa, can connect via the API, as you can see below:
 
-Freelancers, agencies, and partners are able to concentrate on their customer contact and sell appropiate services, while getting all ecommerce functionalities by our SaaS-Ecommerce-Platform Beyond.
-Furthermore, we offer a simple guide for developers to create apps or custom integrations.
-So in summary, we provide an always up-to-date source of information that everyone can easily interact with.
+{% image_custom image="/assets/img/pages/blog/images/blog-infographic.png" width="100" lightbox %}
+
+Depending on your plans, we offer different API-packages (1, 5, 100, etc. shops) to create the best possible starting point for you and/or your customers.
+
+That way freelancers, agencies, and partners are able to concentrate on their customer relation and either sell fully fledged online shops with different themes and common functionalities or sell appropiate services to their customers, while getting core ecommerce functionalities from the cloud and our central "Ecommerce-Backend-as-a-Service"
+
+Think about it - as a tranparent resource just focused around the capabilities of ecommerce. Do not care about maintenance, updates, security, scalability, etc ... just use our Ecommerce-Platform Beyond and focus on adding value for  your customers.
+
+To get started, we offer a simple [guide](https://developer.epages.com) for developers to create apps, custom integrations or an own fronted. That way you use standard functions/templates from us to build "something" on your own.
+
+So have fun, build great apps, integrations or storefronts ... and do not forget to tell us [@epagesdevs](https://www.twitter.com/epagesdevs)
