Juergenization is not for everyone

--- a/_posts/2018/2018-05-24-Jeeconf.md
+++ b/_posts/2018/2018-05-24-Jeeconf.md
@@ -19,7 +19,7 @@ The conference is promoted as the largest Java conference in Eastern Europe.
 Despite this location, it was still possible to find a number of interesting talks in English.
 
 I personally enjoyed the talks given by the guys from [Pivotal](https://pivotal.io){:target="_blank"}.
-[Juergen Hoeller](https://twitter.com/sam_brannen){:target="_blank"} gave an overview of the Spring framework evolution over the last fifteen years, starting from the very beginning, and partly covering the release schedule for 2018.
+[Juergen Hoeller](https://twitter.com/springjuergen){:target="_blank"} gave an overview of the Spring framework evolution over the last fifteen years, starting from the very beginning, and partly covering the release schedule for 2018.
 [Josh Long](https://twitter.com/starbuxman){:target="_blank"} gave a "bootiful" talk showing the audience how easy it is to start prototyping with Spring Boot and how concise and shiny Kotlin code can look like.
 
 At ePages we also have experience using Kotlin, even in production.
