Add final draft

--- a/_posts/2018/2018-03-27-cto-post.md
+++ b/_posts/2018/2018-03-27-cto-post.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: CTO blog post
-date: 2018-03-27
-header_image: private/hackathon-2018.jpg
+title: Why we went Beyond - Insides from our CTO
+date: 2018-06-05
+header_image: public/CTOpost.jpeg
 header_position: center
 category: tech-stories
-tags: ["CTO"]
+tags: ["javascript", "java", "kubernetes", "architecture", "api"]
 authors: ["Harm"]
 ---
 
@@ -15,7 +15,7 @@ So, why do we go this extra mile here at ePages?
 
 ## Environment changes fast
 
-The IT world changed drastically in the last years as the amount of new Open Source Frameworks and the speed of adoption seem to increase logarithmic.
+The IT world changed drastically in the last years as the amount of new open source frameworks and the speed of adoption seem to increase logarithmic.
 Software vendors focus more and more on their core functionalities.
 That allows them to specialize and become best-in-class in their specific segment.
 
@@ -28,12 +28,12 @@ The easiest and nowadays common way to do so, is via APIs - more or less standar
 ### The past was different
 
 As many other companies, ePages started the millennium with a monolith approach that we enhanced and enriched over time.
-During this development time we sometimes went straight, and sometimes went detours.
-Later on, these detours never get cleaned up.
+During this development time, we sometimes went straight, and sometimes went detours.
+Later on, these detours never got cleaned up.
 So, in the end you may offer some awkward functions like a holiday-appartment reservation tool - although being an ecommerce system.
 That way our actual stack became overloaded and lead to many dependencies.
-Our monolith become more and more work-intensive to maintain, and we started spending too much time on keeping stuff running instead of creating additional business value.
-Additionally, although it delivers good performance and is still heavily used and liked by our merchants, it's architecture is definitely outdated.
+It was more and more work-intensive to maintain this monolith, and we started spending too much time on keeping stuff running instead of creating additional business value.
+Additionally, although it still delivers a good performance and is heavily used and liked by our merchants, it's architecture is definitely outdated.
 
 ### New architecture needed
 
@@ -43,14 +43,15 @@ That's why we've decided to go with an API-first approach, which allows us to be
 
 ## Set it on a solid ground
 
-This flexibility is on the one hand based on an architecture that decouples frontend and backend and on the other hand on an organization of functions around capabilities, which enforces a modular structure.
+This flexibility is on the one hand based on an architecture that decouples frontend and backend, and on the other hand on an organization of functions around capabilities, which enforces a modular structure.
 
 Furthermore, we make use of the latest tech stack by changing towards a Java and JavaScript ecosystem and providing operational abstraction with Docker and Kubernetes.
-Working with Open Source Frameworks rounds everything off, as it allows us to “stand on the shoulders of giants” by leveraging of 100 thousand lines of own code towards 1 billion lines of Open Source code.
+Working with open source frameworks rounds everything off, as it allows us to “stand on the shoulders of giants”.
+With the help of open source projects, 1 billion lines of open source code can be leveraged instead of 100 thousand lines of own code.
 
 ### Based on microservices
 
-Technically, we chose microservices, which give us the advantage of working with single deployable units.
+Technically, we chose microservices, which gives us the advantage of working with single deployable units.
 Every microservice owns its respective data and is exclusively responsible for its services and entities.
 The communication between these microservices is either assured by a REST-API or asynchronous messaging.
 This setup allows us a freedom of choice concerning micro architecture and language so every team can work in it's preferred environment.
@@ -67,14 +68,28 @@ Nearly everyone, who enriches us or vice versa, can connect via our API, as you 
 
 {% image_custom image="/assets/img/pages/blog/images/blog-infographic.png" width="100" lightbox %}
 
-Depending on your plans, we offer different API-packages (1, 5, 100, etc. shops) to create the best possible starting point for you and/or your customers.
+Our API presents the best possible starting point for you and/or your clients.
+Resellers can sell fully fledged online shops with different themes, and common functionalities that are hosted in our cloud.
+Through our shop provisioning and management tool, they can provision and manage their shops.
 
-That way freelancers, agencies, and partners are able to concentrate on their customer relation and either sell fully fledged online shops with different themes and common functionalities or sell appropiate services to their customers, while getting core ecommerce functionalities from the cloud and our central "Ecommerce-Backend-as-a-Service"
+On the other hand, freelancers, agencies, and partners are able to concentrate on their client contact.
+They can sell customized services to their clients, while getting core ecommerce functionalities from the cloud and our central "Ecommerce-Backend-as-a-Service".
+The extend of the customization is up to them.
+They can either build upon our cockpit, come up with their own custom cockpit, or create an app or alike.
+Based on that, they are free to build their own buy button, CMS integration, open source storefront, or whatever is demanded by their clients.
+Think about it - as a transparent resource, focused around the capabilities of ecommerce.
+They don't need to care about maintenance, updates, security, scalability, etc.
+By using our Ecommerce-Platform Beyond, they can purely focus on adding value for their clients.
 
-Think about it - as a tranparent resource just focused around the capabilities of ecommerce.
-Do not care about maintenance, updates, security, scalability, etc ... just use our Ecommerce-Platform Beyond and focus on adding value for  your customers.
+To get started, we offer a simple [guide](https://developer.epages.com) for developers.
+If you need a number of shops to start with, just contact us.
+Depending on your plans, we can agree on different API-packages (1, 5, 100, etc. shops).
 
-To get started, we offer a simple [guide](https://developer.epages.com) for developers to create apps, custom integrations, or an own fronted.
-That way you use standard functions/templates from us to build "something" on your own.
+So have fun, build great apps, integrations or storefronts ... and do not forget to [tell us](https://www.twitter.com/epagesdevs).
 
-So have fun, build great apps, integrations or storefronts ... and do not forget to tell us [@epagesdevs](https://www.twitter.com/epagesdevs)
+### About the author
+
+{% image_custom image="/assets/img/pages/blog/images/author-harm-behrens.jpg" width="10" align="left" circle %}
+
+<br>
+Harm Behrens, the CTO of ePages, shares the “bike2work” passion of many ePagees. He’s an e-commerce-addict, internet enthusiast and Ruby evangelist.
