Add About the author section

--- a/_posts/2016/2016-09-23-rnd-day-2016.md
+++ b/_posts/2016/2016-09-23-rnd-day-2016.md
@@ -6,6 +6,7 @@ header_image: private/roadmap.jpg
 category: events
 tags: ["agile", "scrum", "roadmap", "software", "team"]
 authors: ["Birgit"]
+about_authors: ["bbader"]
 ---
 
 Last week, we hosted another R&amp;D Day at ePages, that provided great insights into the future of our software.
