--- a/_posts/2015/2015-09-15-rnd-day-2015.md
+++ b/_posts/2015/2015-09-15-rnd-day-2015.md
@@ -7,6 +7,7 @@ header_overlay: true
 category: events
 tags: ["architecture", "software", "team", "docker", "api"]
 authors: ["Birgit"]
+about_authors: ["bbader"]
 ---
 
 ePages developers from all company locations convened in Hamburg to spend an amazing time together on software development topics!
