--- a/_posts/2016/2016-05-25-spring-io.md
+++ b/_posts/2016/2016-05-25-spring-io.md
@@ -6,6 +6,7 @@ header_image: private/springio.jpg
 category: events
 tags: ["conference", "java", "spring boot"]
 authors: ["Xavi"]
+about_authors: ["xalvarez"]
 ---
 On 19th and 20th of May, the *Spring I/O* conference took place in Barcelona. It was the 5th edition of an event whose goal is to spread the word about the well-known framework [Spring](https://spring.io/){:target="_blank"} and, more importantly, the ecosystem around it. Luckily, four *ePagees* including myself had the chance to attend the conference.
 
