--- a/_posts/2016/2016-05-20-geecon.md
+++ b/_posts/2016/2016-05-20-geecon.md
@@ -6,6 +6,7 @@ header_image: private/geecon.jpg
 category: events
 tags: ["conference", "microservices", "java", "delivery"]
 authors: ["Mathias"]
+about_authors: ["mduesterhoeft"]
 ---
 
 Sometimes it is a good idea as a developer to step back and do something different for a few days.
