Add non-epagee author description

--- a/_posts/2015/2015-09-02-barcamp-kiel-2015.md
+++ b/_posts/2015/2015-09-02-barcamp-kiel-2015.md
@@ -6,6 +6,7 @@ header_image: public/barcamp-kiel.jpg
 category: events
 tags: ["conference", "barcamp", "jenkins", "gamification"]
 authors: ["David"]
+about_authors: ["dpauli"]
 ---
 
 Last weekend, more than 80 developers, designers, bloggers and shop owners participated in the 6. [BarCamp in Kiel](http://barcamp-kiel.de){:target="_blank"}, Germany.
