--- a/_posts/2015/2015-11-30-wjax2015-agile-day.md
+++ b/_posts/2015/2015-11-30-wjax2015-agile-day.md
@@ -6,6 +6,7 @@ header_image: public/wjax-conf.jpg
 category: events
 tags: ["conference", "devops", "agile"]
 authors: ["Silvio"]
+about_authors: ["skoenig"]
 ---
 
 From November 2nd to November 6th the W-JAX 2015 took place in Munich. This annual conference focuses on software development & architecture, enterprise technologies, DevOps and many other interesting topics.
