--- a/_posts/2016/2016-07-14-wiremock.md
+++ b/_posts/2016/2016-07-14-wiremock.md
@@ -6,6 +6,7 @@ header_image: private/balls-of-mud.jpg
 category: tech-stories
 tags: ["microservices", "testing", "api", "spring"]
 authors: ["Oliver T."]
+about_authors: ["otrosien"]
 ---
 
 <style>
