--- a/_posts/2016/2016-07-26-xconf-2016.md
+++ b/_posts/2016/2016-07-26-xconf-2016.md
@@ -6,6 +6,7 @@ header_image: public/lego.jpg
 category: events
 tags: ["conference", "microservices", "containers"]
 authors: ["Oleksandr", "Renato"]
+about_authors: ["ovynogradov", "rteixeira"]
 ---
 
 <style>
