--- a/_posts/2016/2016-10-13-jugsaxony-2016.md
+++ b/_posts/2016/2016-10-13-jugsaxony-2016.md
@@ -6,6 +6,7 @@ header_image: public/coffeebeans.jpg
 category: events
 tags: ["conference", "java", "jdk", "modularization", "elasticsearch"]
 authors: ["Benjamin"]
+about_authors: ["bnothdurft"]
 ---
 
 <style>
