--- a/_posts/2017/2017-05-16-ia-conference-2017.md
+++ b/_posts/2017/2017-05-16-ia-conference-2017.md
@@ -6,6 +6,7 @@ header_image: public/iaconf.jpg
 category: events
 tags: ["ux", "information architecture", "smart devices", "conference"]
 authors: ["Lena B."]
+about_authors: ["lbrandt"]
 ---
 
 <style>
