EPNG-4507 Add introduction and questions

--- a/_posts/2018/2018-08-30-socrates-2018.md
+++ b/_posts/2018/2018-08-30-socrates-2018.md
@@ -11,13 +11,19 @@ authors: ["Jan M.", "Oliver Z."]
 about_authors: ["jmewes", "ozscheyge"]
 ---
 
-Intro
+The SoCraTes is an open-space conference dedicated to software craft and testing.
+There where 215 attendies from 17 countries gathered on the last weekend of August in Soltau, Germany.
+To kickoff the unconference the attendees collected ideas, suggestions, and wishes in a World Cafe.
+The main conference followed the concept of an open-conference.
+The sessions where suggested in the morning by the participants and spread across 15 tracks.
+There were unformal discussions, presentations, workshops, and a lot of hallway chat.
+The very diverse topics ranged from Agile methodologies, to collaboration in general, software development best practices, web security to nail polishing, and games.
 
-## Q and A style
+Two epagees attended this years conference. Oliver for the third and Jan for as a first timer.
 
-**Q: Is the sky blue?**
-
-Jan: Yes, and water is transparent.
-
-Oliver: Yes, but it depends.
-
+## Why did you attend the SoCraTes conference?
+## What was your favorite session?
+## Which other sessions did you attend?
+## What key learnings do you want to apply in the near future?
+## What was your biggest surprise?
+## Any advice for SoCraTes newcomers?
