EPNG-4507 Improve intro text

--- a/_posts/2018/2018-08-30-socrates-2018.md
+++ b/_posts/2018/2018-08-30-socrates-2018.md
@@ -11,17 +11,18 @@ authors: ["Jan M.", "Oliver Z."]
 about_authors: ["jmewes", "ozscheyge"]
 ---
 
-The SoCraTes is an open-space conference dedicated to software craft and testing.
-There where 215 attendies from 17 countries gathered on the last weekend of August in Soltau, Germany.
-To kickoff the unconference the attendees collected ideas, suggestions, and wishes in a World Cafe.
-The main conference followed the concept of an open-conference.
-The sessions where suggested in the morning by the participants and spread across 15 tracks.
-There were unformal discussions, presentations, workshops, and a lot of hallway chat.
-The very diverse topics ranged from Agile methodologies, to collaboration in general, software development best practices, web security to nail polishing, and games.
+The SoCraTes is an Open Space conference dedicated to software craft and testing.
+This year, 215 participants from 17 countries gathered on the last weekend of August in Soltau, Germany.
+To kickoff the (un-)conference everyone collected ideas, suggestions, and wishes in a [World Café](https://en.wikipedia.org/wiki/World_caf%C3%A9).
+Being an Open Space conference, the sessions were suggested each morning by the attendees and distributed across 15 tracks.
+There were informal discussions, presentations, workshops, and a lot of hallway chat.
+The very diverse topics ranged from Agile methodologies, to collaboration in general, to software development best practices, to web security, to games, to nail polish.
 
-Two epagees attended this years conference. Oliver for the third and Jan for as a first timer.
+Two ePages developers joined this year's conference.
+Jan participated for the first time and Oliver is already a SoCraTes regular with three attended conferences.
 
-## Why did you attend the SoCraTes conference?
+## Why did you go to the SoCraTes 2018?
+
 ## What was your favorite session?
 ## Which other sessions did you attend?
 ## What key learnings do you want to apply in the near future?
