EPNG-4507 Add Olli answer skeleton

--- a/_posts/2018/2018-08-30-socrates-2018.md
+++ b/_posts/2018/2018-08-30-socrates-2018.md
@@ -23,8 +23,34 @@ Jan participated for the first time and Oliver is already a SoCraTes regular wit
 
 ## Why did you go to the SoCraTes 2018?
 
+**Oliver**:
+Additionally I wanted to see how other developers keep up with cutting-edge computer science research topics and include such findings in their day-to-day work.
+
+I pushed and contributed to an "Evil Arts of Communication" session.
+... Also I wanted to "test-drive" my "How to teleport" talk.
+
 ## What was your favorite session?
+
+**Oliver**:
+I was already familiar with the [OWASP Top 10]() security vulnerabilities, but I did not know, that there is a demo web shop with various vulnerability types and built-in gamification, that you can use to practice and understand the various attack vectors.
+So "Hacking the Juice Shop" was definitely a highlight for me.
+
 ## Which other sessions did you attend?
+
+**Oliver**:
+
 ## What key learnings do you want to apply in the near future?
+
+**Oliver**:
+
 ## What was your biggest surprise?
+
+**Oliver**:
+
 ## Any advice for SoCraTes newcomers?
+
+**Oliver**:
+Reach out to as many people as possible and try to attend plenty of sessions!
+If you are unhappy with how a session evolved, use the [Law of Two Feet]() and try to contribute somewhere else!
+Always sit with different people!
+Most of all: be prepared to be surprised!
