EPNG-4507 First draft answers Jan

--- a/_posts/2018/2018-08-30-socrates-2018.md
+++ b/_posts/2018/2018-08-30-socrates-2018.md
@@ -29,23 +29,58 @@ Additionally I wanted to see how other developers keep up with cutting-edge comp
 I pushed and contributed to an "Evil Arts of Communication" session.
 ... Also I wanted to "test-drive" my "How to teleport" talk.
 
+**Jan**:
+The SoCraTes was recommended to me as the best conference from two people who go to a lot of conferences.
+So I was curious to find out why they are so exited about it.
+Beside this I think it is a good idea in general to visit one conference per year for the sake of professional growth.
+
 ## What was your favorite session?
 
 **Oliver**:
 I was already familiar with the [OWASP Top 10]() security vulnerabilities, but I did not know, that there is a demo web shop with various vulnerability types and built-in gamification, that you can use to practice and understand the various attack vectors.
 So "Hacking the Juice Shop" was definitely a highlight for me.
 
+**Jan**:
+My favorite session had the title "Broken World".
+It was lead by a QA consultant who argued that life is still great even though things may be broken.
+The discussion ended with the conclusion that detachment helps in coping with system failures which are unavoidable.
+Another interesting insight was the observation that every crisis is also a trigger for innovation.
+
+
 ## Which other sessions did you attend?
 
 **Oliver**:
+
+**Jan**:
+One of the other sessions I attended was about assessing the quality of unknown code bases.
+It started with a demonstration how the different dimensions of a code base can be analyzed with Code Chalta.
+Further it included tips how to approach structural problems with the Technical Dept Quadrant model and a list of static analysis tools.
+
+The others were about soft skills like taking sketch notes, the human factors of software development, and self-care.
+
+Also I lead two sessions by myself.
+One was a discussion about approaches for learning new technologies.
+The other was a presentation of the architectural prototype of a personal open-source project of mine.
+
 
 ## What key learnings do you want to apply in the near future?
 
 **Oliver**:
 
+**Jan**:
+Inspired by the "Broken World" session I'll try to improve spending my energy to fix the right things and accept those beyond my control.
+
+From the conversations beside the session I could derive a lot of ideas, e.g. trying out the Google Design Sprint concept during a Hackathon and digging deeper into the Hexagonal Architecture model.
+
+Also I'll try out some of the static analysis tools recommended in the "Unknown Code Base Quality" session, i.e. Code Chalta, OWASP Dependency Check, codemmat, and Structure 101.
+
+
 ## What was your biggest surprise?
 
 **Oliver**:
+
+**Jan**:
+Having gender neutral bathrooms didn't feel so weird like anticipated.
 
 ## Any advice for SoCraTes newcomers?
 
@@ -54,3 +89,6 @@ Reach out to as many people as possible and try to attend plenty of sessions!
 If you are unhappy with how a session evolved, use the [Law of Two Feet]() and try to contribute somewhere else!
 Always sit with different people!
 Most of all: be prepared to be surprised!
+
+**Jan**:
+Before you go to the conference, think about what you want to learn.
