EPNG-4507 Merge Jan's answers

--- a/_posts/2018/2018-08-30-socrates-2018.md
+++ b/_posts/2018/2018-08-30-socrates-2018.md
@@ -26,7 +26,7 @@ Jan participated for the first time and Oliver is already a SoCraTes regular wit
 **Oliver**:
 Additionally I wanted to see how other developers keep up with cutting-edge computer science research topics and include such findings in their day-to-day work.
 
-I pushed and contributed to an "Evil Arts of Communication" session.
+I pushed for and contributed to an "Evil Arts of Communication" session.
 ... Also I wanted to "test-drive" my "How to teleport" talk.
 
 **Jan**:
@@ -65,6 +65,10 @@ The other was a presentation of the architectural prototype of a personal open-s
 
 ## What key learnings do you want to apply in the near future?
 
+I will definitely launch the [Juice Shop]() again and try to ...
+
+The (professional) "life hacks" session over lunch inspired me to formalize and -most important- write down my own life hacks.
+
 **Oliver**:
 
 **Jan**:
@@ -77,18 +81,20 @@ Also I'll try out some of the static analysis tools recommended in the "Unknown 
 
 ## What was your biggest surprise?
 
-**Oliver**:
-
 **Jan**:
 Having gender neutral bathrooms didn't feel so weird like anticipated.
 
+**Oliver**:
+Can be used to iteratively reduce the complexity of an existing code base.
+So I will have a closer look on the current code bases I am working on, to improve in this regard.
+
 ## Any advice for SoCraTes newcomers?
+
+**Jan**:
+Before you go to the conference, think about what you want to learn.
 
 **Oliver**:
 Reach out to as many people as possible and try to attend plenty of sessions!
 If you are unhappy with how a session evolved, use the [Law of Two Feet]() and try to contribute somewhere else!
 Always sit with different people!
 Most of all: be prepared to be surprised!
-
-**Jan**:
-Before you go to the conference, think about what you want to learn.
