--- a/_posts/2018/2018-08-30-socrates-2018.md
+++ b/_posts/2018/2018-08-30-socrates-2018.md
@@ -23,22 +23,19 @@ Jan participated for the first time and Oliver is already a SoCraTes regular wit
 
 ## Why did you go to the SoCraTes 2018?
 
+**Jan**:
+The SoCraTes was recommended to me as the best conference from two people who go to a lot of conferences.
+So I was curious to find out why they are so exited about it.
+Beside this I think it is a good idea in general to visit one conference per year for the sake of professional growth.
+
 **Oliver**:
 Additionally I wanted to see how other developers keep up with cutting-edge computer science research topics and include such findings in their day-to-day work.
 
 I pushed for and contributed to an "Evil Arts of Communication" session.
 ... Also I wanted to "test-drive" my "How to teleport" talk.
 
-**Jan**:
-The SoCraTes was recommended to me as the best conference from two people who go to a lot of conferences.
-So I was curious to find out why they are so exited about it.
-Beside this I think it is a good idea in general to visit one conference per year for the sake of professional growth.
 
 ## What was your favorite session?
-
-**Oliver**:
-I was already familiar with the [OWASP Top 10]() security vulnerabilities, but I did not know, that there is a demo web shop with various vulnerability types and built-in gamification, that you can use to practice and understand the various attack vectors.
-So "Hacking the Juice Shop" was definitely a highlight for me.
 
 **Jan**:
 My favorite session had the title "Broken World".
@@ -46,10 +43,12 @@ It was lead by a QA consultant who argued that life is still great even though t
 The discussion ended with the conclusion that detachment helps in coping with system failures which are unavoidable.
 Another interesting insight was the observation that every crisis is also a trigger for innovation.
 
+**Oliver**:
+Over lunch we collectively gathered "Evil Arts of Communication", things you do not normally hear in soft skill trainings for developers.
+We shared stories where we identified manipulative behavior of colleagues ranging from using logical fallacies to Neural Linguistic Programming techniques.
+
 
 ## Which other sessions did you attend?
-
-**Oliver**:
 
 **Jan**:
 One of the other sessions I attended was about assessing the quality of unknown code bases.
@@ -62,31 +61,35 @@ Also I lead two sessions by myself.
 One was a discussion about approaches for learning new technologies.
 The other was a presentation of the architectural prototype of a personal open-source project of mine.
 
+**Oliver**:
+Remote work and robots, software developer self-care, an intro to stoicism, a personal kanban follow-up from last year (show and share), drawing without symbols (see with your eyes, not with your brain), the human side of software, hacking the Juice Shop, the mindset, gaining more quality of life throughout your work life, cloud testing, CI extreme, life hacks, dyad meditation
+
 
 ## What key learnings do you want to apply in the near future?
 
-I will definitely launch the [Juice Shop]() again and try to ...
-
-The (professional) "life hacks" session over lunch inspired me to formalize and -most important- write down my own life hacks.
-
-**Oliver**:
-
 **Jan**:
-Inspired by the "Broken World" session I'll try to improve spending my energy to fix the right things and accept those beyond my control.
+Inspired by the "Broken World" session I will try to improve spending my energy to fix the right things and accept those beyond my control.
 
 From the conversations beside the session I could derive a lot of ideas, e.g. trying out the Google Design Sprint concept during a Hackathon and digging deeper into the Hexagonal Architecture model.
 
-Also I'll try out some of the static analysis tools recommended in the "Unknown Code Base Quality" session, i.e. Code Chalta, OWASP Dependency Check, codemmat, and Structure 101.
+Also I will try out some of the static analysis tools recommended in the "Unknown Code Base Quality" session, i.e. Code Chalta, OWASP Dependency Check, codemmat, and Structure 101.
+
+**Oliver**:
+I will definitely boot up the [OWASP Juice Shop](https://www.owasp.org/index.php/OWASP_Juice_Shop_Project) again and try to exploit the majority of issues it is illustrating.
+The (professional) "life hacks" lunch session inspired me to structure and write down my own life hacks.
+Last but not least I got really great feedback for my first "How to Teleport" talk, so I will close some loose ends and later publish an improved article online.
 
 
 ## What was your biggest surprise?
 
 **Jan**:
-Having gender neutral bathrooms didn't feel so weird like anticipated.
+Having gender neutral bathrooms did not feel so weird after all.
 
 **Oliver**:
-Can be used to iteratively reduce the complexity of an existing code base.
-So I will have a closer look on the current code bases I am working on, to improve in this regard.
+I was humbled to see, when we were instructed to draw "with our eyes only", how much our brain pre-interprets our perception of reality.
+A huge "Aha!"-moment struck me, when we used Liskov substitution, covariance and contravariance to iteratively reduce code base complexity. I will need to practice this more often!
+Also "Human Tetris" is a tough problem and great fun! 😉
+
 
 ## Any advice for SoCraTes newcomers?
 
@@ -94,7 +97,7 @@ So I will have a closer look on the current code bases I am working on, to impro
 Before you go to the conference, think about what you want to learn.
 
 **Oliver**:
-Reach out to as many people as possible and try to attend plenty of sessions!
-If you are unhappy with how a session evolved, use the [Law of Two Feet]() and try to contribute somewhere else!
-Always sit with different people!
-Most of all: be prepared to be surprised!
+Reach out to as many people as possible and try to attend plenty of sessions! Try to sit with different people!
+If you are unhappy with how a session evolved, use the [Law of Two Feet](), relax or contribute somewhere else!
+
+But most of all: be prepared to be surprised!
